--- a/templates/rate_edit.html
+++ b/templates/rate_edit.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Rate edit</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulmaswatch/0.7.2/cosmo/bulmaswatch.min.css" />
     </head>
     <body>
         <p>Rate: {{from_currency}} => {{to_currency}}</p>
