--- a/templates/logs.html
+++ b/templates/logs.html
@@ -3,6 +3,9 @@
 <html>
 <head>
     <title>Api Logs</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulmaswatch/0.7.2/cosmo/bulmaswatch.min.css" />
 </head>
 <body>
     {% if not logs %}
