--- a/templates/xrates.html
+++ b/templates/xrates.html
@@ -1,45 +1,36 @@
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rates</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulmaswatch/0.7.2/cosmo/bulmaswatch.min.css" />
-</head>
-<body>
-    {% if not xrates %}
-    <h1>No rates!</h1>
-    {% endif %}
-    
-    <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-        <thead align="center">
-            <td>From</td>
-            <td>To</td>
-            <td>Rate</td>
-            <td>Updated</td>
-            <td>
-                <a href="{{url_for('update_xrates')}}">Update All</a>
-            </td>
-        </thead>
+{% block title %}Rates{% endblock %}
 
-        {% for rate in xrates %}
-        <tr align="center">
-            <td>{{rate.from_currency}}</td>
-            <td>{{rate.to_currency}}</td>
-            <td>{{rate.rate}}</td>
-            <td>{{rate.updated}}</td>
-            <td>
-                <a href="{{url_for('update_xrates', from_currency=rate.from_currency, to_currency=rate.to_currency)}}">Update</a>
-            </td>
-        </tr>
-        {% endfor %}
-        
-    </table>
-</body>
-</html>
+{% block body %}
+        <section class="section">
+            {% if not xrates %}
+            <h1>No rates!</h1>
+            {% endif %}
 
+            <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
+                <thead align="center">
+                    <td>From</td>
+                    <td>To</td>
+                    <td>Rate</td>
+                    <td>Updated</td>
+                    <td>
+                        <a href="{{url_for('update_xrates')}}">Update All</a>
+                    </td>
+                </thead>
 
+                {% for rate in xrates %}
+                <tr align="center">
+                    <td>{{rate.from_currency}}</td>
+                    <td>{{rate.to_currency}}</td>
+                    <td>{{rate.rate}}</td>
+                    <td>{{rate.updated}}</td>
+                    <td>
+                        <a href="{{url_for('update_xrates', from_currency=rate.from_currency, to_currency=rate.to_currency)}}">Update</a>
+                    </td>
+                </tr>
+                {% endfor %}
 
-
-
+            </table>
+        </section>
+{% endblock %}
