--- a/templates/logs.html
+++ b/templates/logs.html
@@ -1,26 +1,17 @@
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Api Logs</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulmaswatch/0.7.2/cosmo/bulmaswatch.min.css" />
-</head>
-<body>
-    {% if not logs %}
-    <h1>No logs!</h1>
-    {% endif %}
-    
-    <ul>
-        {% for l in logs %}
-        <li>{{l.json()}}</li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+{% block title %}Api logs{% endblock %}
 
-
-
-
-
+{% block body %}
+    <body>
+        {% if not logs %}
+        <h1>No logs!</h1>
+        {% endif %}
+        <div class="content">
+            <ol type="1">
+                {% for l in logs %}
+                <li>{{l.json()}}</li>
+                {% endfor %}
+            </ol>
+        </div>
+{% endblock %}
